--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 // Home Content
 
 .home {
+  
 
   .intro {
 
@@ -12,9 +13,16 @@
       padding:0 15px;
     }
     img {
+      margin-top: 15%;
       @media @mobile{
         height: 15rem;
+        margin-top: 25%;        
       }
+    }
+    @media @mobile{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
   
   }
@@ -54,6 +62,11 @@
     p {
       margin-top: 13px;
     }
+    @media @mobile{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
   }
 
   .walk {
@@ -65,6 +78,7 @@
     @media @mobile{
       display: flex;
       flex-direction: column-reverse;
+      justify-content: center;
       padding: 0;
     }
 
@@ -73,7 +87,9 @@
       @media @mobile{
         width: 100%;
         margin-top: 3rem;
-      
+        display: flex;
+        flex-direction: column;
+        justify-content: center;      
       }
 
       h3 {
@@ -102,6 +118,7 @@
       margin-left: 4%;
       @media @mobile{
         width:100%;
+        margin: 0 auto;
       }
       
       img {
