--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,9 @@
     border-color: @nav-border;
     color: @nav-font;
     padding-bottom: 2rem;
+    width: 100%;
+    position: fixed;
+    opacity: .75;
     h1{
         font-size: 4rem;
         padding: 1.5rem;
@@ -17,4 +20,12 @@
         color:@nav-font;
         font-size: 1.5rem;
     }
+}
+.navi:hover{
+    opacity: 1;
+    color: black;
+
+}
+a:hover{
+    color: red;
 }
